Cookie z-index fixes

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -42,6 +42,17 @@ body {
 
 /* basic */
 
+/*cookie section*/
+
+.cc-window.cc-banner {
+  z-index: 999999 !important;
+}
+
+.cc-revoke,
+.cc-window {
+  z-index: 9999999 !important;
+}
+
 .m-container {
   max-width: 1140px;
   display: block;
